feat: Внесение правок

--- a/components/main/Contacts/Header/HeaderMedia.module.scss
+++ b/components/main/Contacts/Header/HeaderMedia.module.scss
@@ -9,6 +9,10 @@
         &__subtitle {
             max-width: unset;
         }
+
+        &__button {
+            margin-bottom: unset;
+        }
     }
 }
 
