--- a/components/main/Team/TeamMedia.module.scss
+++ b/components/main/Team/TeamMedia.module.scss
@@ -12,6 +12,10 @@
         &__list {
             gap: 23px;
         }
+
+        &__button {
+            margin-bottom: unset;
+        }
     }
 }
 
