--- a/components/News/Preview/Preview.module.scss
+++ b/components/News/Preview/Preview.module.scss
@@ -7,6 +7,22 @@
 
     margin: 0 auto;
 
+    position: relative;
+
+    &::before {
+        content: '';
+        display: block;
+
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+
+        width: 100%;
+        height: 100%;
+
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .7) 100%);
+    }
+
     &__img {
         width: 100%;
         height: 100%;
@@ -23,9 +39,9 @@
         transform: translateX(-50%);
 
         display: grid;
-        grid-template-areas: 
-        'date text'
-        'button text';
+        grid-template-areas:
+            'date text'
+            'button text';
         column-gap: 62px;
         row-gap: 56px;
         grid-template-columns: min-content;
