--- a/components/main/Rules/RulesMedia.module.scss
+++ b/components/main/Rules/RulesMedia.module.scss
@@ -8,6 +8,10 @@
         &__subtitle {
             max-width: unset;
         }
+
+        &__button {
+            margin-bottom: unset;
+        }
     }
 }
 
