--- a/components/main/Team/Team.module.scss
+++ b/components/main/Team/Team.module.scss
@@ -1,4 +1,4 @@
-.error{
+.error {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,13 +64,15 @@
         grid-area: button;
 
         width: fit-content;
+
+        margin-bottom: 15px;
     }
 
     &__list {
         margin-top: 80px;
 
         display: grid;
-        grid-template-columns: repeat(4, minmax(100px,285px));
+        grid-template-columns: repeat(4, minmax(100px, 285px));
         gap: 30px;
     }
 }
@@ -85,14 +87,14 @@
     width: 100%;
     max-width: inherit;
 
-    &_first{
+    &_first {
         grid-column: 1/3;
 
         width: 100%;
         max-width: unset;
     }
 
-    &_last{
+    &_last {
         grid-column: 3/5;
 
         width: 100%;
